--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,5 @@
-# Dependencies
-/node_modules
-/.pnp
-.pnp.js
+node_modules
 
-# Testing
-/coverage
-
-# Production
+/.cache
 /build
-/public/build
-
-# Misc
-.DS_Store
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# IDE
-.idea
-.vscode
-*.swp
-*.swo
-
-# Vercel
-.vercel
