--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "dev": "remix dev",
-  "build": "remix build",
-  "postbuild": "remix setup netlify",
-  "start": "netlify dev",
+    "build": "remix vite:build",
+    "dev": "remix vite:dev",
+    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "start": "remix-serve ./build/server/index.js",
     "typecheck": "tsc"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
+    "@netlify/remix-adapter": "^2.6.1",
     "@react-three/drei": "^10.0.8",
     "@react-three/fiber": "^9.1.2",
     "@react-three/postprocessing": "^3.0.4",
     "@reduxjs/toolkit": "^2.8.2",
-    "@remix-run/netlify": "^1.19.3",
     "@remix-run/node": "^2.16.7",
     "@remix-run/react": "^2.16.7",
     "@remix-run/serve": "^2.16.7",
@@ -39,7 +39,6 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@netlify/remix-adapter": "^2.6.1",
     "@remix-run/dev": "^2.16.7",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
