--- a/package.json
+++ b/package.json
@@ -13,28 +13,22 @@
   "dependencies": {
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
-    "@netlify/remix-adapter": "^2.6.1",
-    "@react-three/drei": "^9.56.4",
-    "@react-three/fiber": "^9.1.2",
-    "@react-three/postprocessing": "^3.0.4",
     "@reduxjs/toolkit": "^2.8.2",
     "@remix-run/node": "^2.16.7",
     "@remix-run/react": "^2.16.7",
     "@remix-run/serve": "^2.16.7",
-    "@types/three": "^0.176.0",
+    "@remix-run/vercel": "^1.19.3",
     "@types/uuid": "^10.0.0",
     "@types/xlsx": "^0.0.36",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.14.0",
     "isbot": "^4.1.0",
-    "postprocessing": "^6.37.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^6.0.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
-    "three": "^0.176.0",
     "uuid": "^11.1.0",
     "xlsx": "^0.18.5"
   },
