--- a/netlify.toml
+++ b/netlify.toml
@@ -1,14 +1,16 @@
 [build]
-  command = "npm install --legacy-peer-deps && npm run build"
+  command = "npm run build"
   publish = "public"
-  functions = "netlify/functions"
 
 [build.environment]
   NODE_VERSION = "20"
 
+[[plugins]]
+  package = "@netlify/remix-adapter"
+
 [[redirects]]
   from = "/*"
-  to = "/.netlify/functions/remix-server"
+  to = "/.netlify/functions/remix"
   status = 200
 
 [[headers]]
