--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "dependencies": {
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
+    "@netlify/remix-adapter": "^2.6.1",
     "@reduxjs/toolkit": "^2.8.2",
     "@remix-run/node": "^2.16.7",
     "@remix-run/react": "^2.16.7",
     "@remix-run/serve": "^2.16.7",
-    "@remix-run/vercel": "^1.19.3",
     "@types/uuid": "^10.0.0",
     "@types/xlsx": "^0.0.36",
     "axios": "^1.9.0",
