--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,7 @@
 
 [build.environment]
   NODE_VERSION = "20"
+  NPM_FLAGS = "--legacy-peer-deps"
 
 [[plugins]]
   package = "@netlify/remix-adapter"
@@ -13,6 +14,7 @@
   from = "/*"
   to = "/.netlify/functions/remix"
   status = 200
+  force = true
 
 [[headers]]
   for = "/*"
