--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "remix build && npm run build:netlify",
-    "build:netlify": "netlify build",
+    "build": "remix build",
     "dev": "remix dev",
-    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/server/index.js",
+    "lint": "...",
     "typecheck": "tsc"
   },
   "dependencies": {
