--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   command = "npm run build"
-  publish = "public"
-  functions = "netlify/functions"
+  publish = "build/client"
+  functions = "build/server"
 
 [build.environment]
   NODE_VERSION = "20"
