--- a/netlify.toml
+++ b/netlify.toml
@@ -7,8 +7,29 @@
   NODE_VERSION = "20"
   NPM_FLAGS = "--legacy-peer-deps"
 
-
 [[redirects]]
   from = "/*"
   to = "/.netlify/functions/remix"
   status = 200
+  force = true
+
+[[redirects]]
+  from = "/build/*"
+  to = "/build/:splat"
+  status = 200
+  force = true
+
+[[redirects]]
+  from = "/assets/*"
+  to = "/assets/:splat"
+  status = 200
+  force = true
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-Content-Type-Options = "nosniff"
+    X-XSS-Protection = "1; mode=block"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+    Cache-Control = "public, max-age=0, must-revalidate"
