--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "remix vite:build",
+    "build": "remix vite:build && npm run copy-server",
+    "copy-server": "mkdir -p netlify/functions && cp -r build/server/* netlify/functions/",
     "dev": "remix vite:dev",
     "start": "remix-serve ./build/server/index.js",
     "typecheck": "tsc"
