--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   command = "npm run build"
   publish = "build/client"
-  functions = "build/server"
+  functions = "netlify/functions"
 
 [build.environment]
   NODE_VERSION = "20"
