--- a/netlify.toml
+++ b/netlify.toml
@@ -9,7 +9,7 @@
 
 [[redirects]]
   from = "/*"
-  to = "/.netlify/functions/remix"
+  to = "/.netlify/functions/remix.mjs"
   status = 200
   force = true
 
